syntax = "proto3";
option java_package = "com.xiaomi.demo.proto";
option java_multiple_files = true;
import "google/protobuf/wrappers.proto";

message Book{
  int64 bookId = 1;
  string bookName = 2;
}
enum Status{
  SUCCESS = 0;
  FAILED = 1;
  DEAD = 2;
}


message BookRequest{
  int64 bookId = 1;
  optional google.protobuf.StringValue bookName = 2;
}

message BookResponse{
  repeated Book books = 1;
  Status status = 2;
  map<string, Book> bookMap = 3;
}

service BookService{
  rpc getBooks1(BookRequest) returns(BookResponse);
  rpc getBooks2(BookRequest) returns(stream BookResponse);
  rpc getBooks3(stream BookRequest) returns(BookResponse);
  rpc getBooks4(stream BookRequest) returns(stream BookResponse);
}